--- a/codigo/pages/adm/listagem_disciplinas.html
+++ b/codigo/pages/adm/listagem_disciplinas.html
@@ -51,7 +51,7 @@
         </nav>
     </header>
     <div class="container mt-4">
-        <h2>Listagem de Disciplinas</h2>
+        <h2 class="text-center mb-3">Listagem de Disciplinas</h2>
 
         <button class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addDisciplinaModal">Adicionar
             Disciplina</button>
