--- a/codigo/pages/adm/listagem_professores.html
+++ b/codigo/pages/adm/listagem_professores.html
@@ -51,7 +51,7 @@
         </nav>
     </header>
     <div class="container mt-4">
-        <h2>Listagem de Professores</h2>
+        <h2 class="text-center mb-5">Listagem de Professores</h2>
 
         <!--<button class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addProfessorModal">Adicionar
             Professor</button>-->
