--- a/codigo/pages/adm/cadastro_aulas.html
+++ b/codigo/pages/adm/cadastro_aulas.html
@@ -9,6 +9,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/json/aulas.js"></script>
     <script src="../../assets/json/turmas.js"></script>
     <script src="../../assets/json/disciplinas.js"></script>
     <script src="../../assets/js/aulas.js"></script>
@@ -64,12 +65,6 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label for="subject" class="form-label">Disciplina</label>
-                <select class="form-control" id="subject" required>
-                    <!-- Options will be populated by JavaScript -->
-                </select>
-            </div>
-            <div class="mb-3">
                 <label for="dayOfWeek" class="form-label">Dia da Semana</label>
                 <select class="form-control" id="dayOfWeek" required>
                     <option value="Segunda-feira">Segunda-feira</option>
@@ -78,6 +73,10 @@
                     <option value="Quinta-feira">Quinta-feira</option>
                     <option value="Sexta-feira">Sexta-feira</option>
                 </select>
+            </div>
+            <div class="mb-3">
+                <label for="dataInicio" class="form-label">Data de Início</label>
+                <input type="date" class="form-control" id="dataInicio" required>
             </div>
             <div class="mb-3">
                 <label for="dataTermino" class="form-label">Data de Término</label>
@@ -109,14 +108,6 @@
                 option.value = turma.id;
                 option.textContent = `Turma ${turma.id}`;
                 turmaSelect.appendChild(option);
-            });
-
-            // Populate disciplinas select
-            disciplinas.forEach(disciplina => {
-                let option = document.createElement('option');
-                option.value = disciplina.codigo;
-                option.textContent = disciplina.nome;
-                disciplinaSelect.appendChild(option);
             });
         });
     </script>
