--- a/codigo/pages/professores/listagem_datas.html
+++ b/codigo/pages/professores/listagem_datas.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puc Chek - Cadastro</title>
+    <title>Puc Chek - Frequência</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/js/listagem_datas.js"></script>
 </head>
 
-<body>
+<body onload="listarDatas()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
-                <a class="navbar-brand text-light" href="#">
+                <a class="navbar-brand text-light" href="listagem_turmas.html">
                     <!-- <img src="https://fakeimg.pl/353x129" alt="Puc" width="200" class="img-fluid"> -->
                     Puc Chek
                 </a>
@@ -25,21 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Cadastro de Disciplina</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Cadastro de Aula</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Lista Alunos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Lista Professor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Disciplina</a>
-                        </li>
                         <li class="nav-item" onclick="logoutUser()">
                             <a class="nav-link active text-light" href="#">Sair
                                 <i
@@ -51,20 +37,11 @@
         </nav>
     </header>
     <section class="container mt-5">
+        <h2 class="text-center mb-5">Listagem das Datas</h2>
         <div class="row">
-            <h2 class="text-center mb-5">Listagem das Datas</h2>
-            <ul class="list-group">
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 1</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 2</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 3</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 4</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 5</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 6</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 7</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 8</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 9</a></li>
-                <li class="list-group-item"><a href="listagem_de_presenca.html">Dia 10</a></li>
-              </ul>
+            <ul class="list-group" id="lista-aulas">
+
+            </ul>
         </div>
     </section>
     <footer class="bg-primary fixed-bottom">
