--- a/codigo/pages/professores/listagem_de_presenca.html
+++ b/codigo/pages/professores/listagem_de_presenca.html
@@ -4,18 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puc Chek - Cadastro</title>
+    <title>Puc Chek - Presença</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="../../assets/js/index.js"></script>
+    <style>
+        .btn-toggle {
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 
-<body>
+<body onload="listaAlunos()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
-                <a class="navbar-brand text-light" href="#">
+                <a class="navbar-brand text-light" href="listagem_turmas.html">
                     <!-- <img src="https://fakeimg.pl/353x129" alt="Puc" width="200" class="img-fluid"> -->
                     Puc Chek
                 </a>
@@ -25,21 +31,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Cadastro de Disciplina</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Cadastro de Aula</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Lista Alunos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Lista Professor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Disciplina</a>
-                        </li>
                         <li class="nav-item" onclick="logoutUser()">
                             <a class="nav-link active text-light" href="#">Sair
                                 <i
@@ -51,10 +42,23 @@
         </nav>
     </header>
     <section class="container mt-5">
-        <div class="row">
-            <h2 class="text-center mb-5">Listagem das Precessa</h2>
-            
-        </div>
+        <h2 class="text-center mb-5">Apuração de Frequência</h2>
+        <form id="frequencia" class="form" method="post">
+            <table class="table" id="grid-alunos">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Matrícula</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="table-alunos">
+        
+                </tbody>
+            </table>
+            <button class="btn btn-primary" type="submit" id="botaoSalvar">Salvar</button>
+        </form>
     </section>
     <footer class="bg-primary fixed-bottom">
         <div class="container">
@@ -64,6 +68,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="../../assets/js/listagem_presenca.js"></script>
+    <script>        
+        document.getElementById('frequencia').addEventListener('submit', salvarPresenca);
+    </script>
 </body>
 
 </html>
