--- a/codigo/pages/alunos/listagem_datas_aluno.html
+++ b/codigo/pages/alunos/listagem_datas_aluno.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puc Chek - Home Aluno</title>
+    <title>Puc Chek - Frequência</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/js/listagem_datas_aluno.js"></script>
 </head>
 
-<body onload="listarDisciplinas()">
+<body onload="listarDatas()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
-                <a class="navbar-brand text-light" href="#">
+                <a class="navbar-brand text-light" href="listagem_de_diciplina.html">
                     <!-- <img src="https://fakeimg.pl/353x129" alt="Puc" width="200" class="img-fluid"> -->
                     Puc Chek
                 </a>
@@ -36,33 +37,55 @@
         </nav>
     </header>
     <section class="container mt-5">
-        <h2 class="text-center mb-5">Listagem das Disciplinas</h2>
-        <div class="row" id="cards-disciplinas">
-            <div class="card text-center me-5" style="width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Nome da Materia</h5>
-                  <a href="#" class="btn btn-primary">Acessar</a>
+        <h2 class="text-center mb-5">Aulas</h2>
+        <table class="table" id="frequencia-aluno">
+            <thead>
+                <tr>
+                    <th>Data</th>
+                    <th>Status</th>
+                    <th>Abono</th>
+                    <th>Status Abono</th>
+                </tr>
+            </thead>
+            <tbody id="table-frequencia">
+    
+            </tbody>
+        </table>
+    </section>
+
+    <div class="modal fade" id="justificativaFaltaModal" tabindex="-1" aria-labelledby="justificativaFaltaModal"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="justificativaFaltaModalLabel">Justificar Falta</h5>
                 </div>
-            </div>
-            <div class="card text-center me-5" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Nome da Materia</h5>
-                    <a href="#" class="btn btn-primary">Acessar</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Frequência de Presença</h5>
-                    <p class="card-text">Percentual de presença em aulas.</p>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            75%
+                <form id="form-justificar-falta">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="id-aula">ID:</label>
+                            <input type="text" class="form-control" id="id-aula" required readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="data-aula">Código:</label>
+                            <input type="text" class="form-control" id="data-aula" required readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="status">Status:</label>
+                            <input type="text" class="form-control" id="status" required readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="justificativa">Justificativa:</label>
+                            <textarea class="form-control" id="justificativa" rows="3" required></textarea>
                         </div>
                     </div>
-                </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Solicitar</button>
+                    </div>
+                </form>
             </div>
         </div>
-    </section>
+    </div>
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
@@ -71,7 +94,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="../../assets/js/listagem_disciplinas.js"></script>
+    <script>        
+        document.getElementById('form-justificar-falta').addEventListener('submit', justificarFalta);
+    </script>
 </body>
 
 </html>
