--- a/codigo/pages/professores/listagem_de_presenca.html
+++ b/codigo/pages/professores/listagem_de_presenca.html
@@ -65,7 +65,8 @@
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><script src="../../assets/js/listagem_presenca.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../../assets/js/listagem_presenca.js"></script>
     <script>        
         document.getElementById('frequencia').addEventListener('submit', salvarPresenca);
     </script>
