--- a/codigo/pages/adm/cadastro_aulas.html
+++ b/codigo/pages/adm/cadastro_aulas.html
@@ -94,7 +94,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            const turmas = dadosIniciaisTurmas.turmas;
+            let turmasJSON = localStorage.getItem('db_turmas');
+
+            if (!turmasJSON) { 
+                db_turmas = dadosIniciaisTurmas;
+                localStorage.setItem('db_turmas', JSON.stringify(db_turmas));
+            }
+            else  {
+                db_turmas = JSON.parse(turmasJSON);
+            }
+
+            const turmas = db_turmas.turmas;
             const disciplinas = dadosIniciaisDisciplinas.disciplinas;
 
             const turmaSelect = document.getElementById('classGroup');
