--- a/codigo/pages/adm/cadastro_pessoas.html
+++ b/codigo/pages/adm/cadastro_pessoas.html
@@ -54,35 +54,31 @@
     <section class="container">
         <div class="row">
             <p class="text-center h2 p-5">Cadastro de pessoas</p>
-            <div class="col-10">
-                <div class="input-group ">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
+            <form id="form-cadastro-usuarios">
+                <div class="col-10">
+                    <div class="input-group ">
+                        <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
+                            placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1" id="nome" required>
+                        <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
+                            placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1" id="matricula" required>
+                        <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
+                            placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1" id="senha" required>
+                    </div>
                 </div>
-            </div>
-            <div class="col-2">
-                <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example">
-                    <option selected>Perfil</option>
-                    <option value="1">Administração</option>
-                    <option value="2">Professor</option>
-                    <option value="3">Alunos</option>
-                </select>
-                <div class="d-flex mt-5 justify-content-end">
-                    <input class="btn btn-primary" type="submit" value="Salvar">
+                <div class="col-2">
+                    <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example" id="perfil" required>
+                        <option selected>Perfil</option>
+                        <option value="1">Administração</option>
+                        <option value="2">Professor</option>
+                        <option value="3">Alunos</option>
+                    </select>
+                    <div class="d-flex mt-5 justify-content-end">
+                        <input class="btn btn-primary" type="submit" value="Salvar">
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </section>
-    <section>
-        <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="cadastro_disciplina.html" role="button">Next</a>
-        </div>
-    </section>
-
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
@@ -90,6 +86,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../../assets/js/cadastro_pessoas.js"></script>
+    <script>        
+        document.getElementById('form-cadastro-usuarios').addEventListener('submit', cadastraUsuario);
+    </script>
 </body>
 
 </html>
